paragon/blocks/_header.scss
#root {
    header.site-header-desktop,
    header.learning-header {
        box-shadow: 0 0 6px 0 rgba($black, .75);
        padding: $header-vertical-padding 0;
        z-index: 3;

        .logo {
            padding: 0;
            top: 0;
            height: $header-logo-height;
            margin-right: 25px;
        }

        .main-nav .nav-link {
            padding: 5px;
            font-weight: 600;
            font-size: 14px;
            text-transform: uppercase;
            color: $header-nav-link-color;

            &:hover {
                background: none;
                color: $header-nav-link-color-hover;
            }

            &:focus:not(:hover) {
                color: $white;
                border-radius: 3px;
            }
        }

        .dropdown-menu {
            min-width: 10rem;
        }
    }

    header.site-header-desktop {
        height: auto;

        & > .px-5 {
            max-width: $container-width;
            margin: 0 auto;
            padding: 0 12px !important;

            .main-nav {
                .menu {
                    margin-left: 10px;
                }

                .expanded .nav-link {
                    color: $white;

                    &:hover {
                        background: $primary;
                    }
                }
            }

            .course-title-lockup {
                padding-top: 0;
                padding-bottom: 0;
            }
        }
    }

    header.learning-header {
        height: auto;
        font-family: $font;

        .logo img {
            height: 100%;
        }

        .course-title-lockup .small {
            font-size: 87.5%;
        }
    }

    header.site-header-mobile {
        padding: $header-vertical-padding 0;
        height: auto;

        .logo img {
            height: $header-logo-height;
        }

        .menu-content {
            a {
                color: $primary;
            }

            .menu-trigger {
                width: 100%;

                & + .menu-content {
                    padding-left: 1.5rem;
                    padding-right: 1.5rem;
                }
            }
        }

        .menu-trigger {
            width: 45px;
            height: 45px;

            svg rect,
            .avatar {
                color: $primary;
            }
        }
    }
}

